--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,9 @@ bld/
 [Ll]og/
 
 # Visual Studio 2015 cache/options directory
-#.vs/
-.vs\Registro_Familiar\v15\Server\sqlite3
+.vs/
+v15/
+#.vs\Registro_Familiar\v15\Server\sqlite3
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
