--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+*.lock
+*.ide-shm
+*.ide-wal
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-shm
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/db.lock
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-wal
