sigo metiendo archivo para ignorar no se que pex se sepone que ya no tendria que darme estos problemas
algo

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,5 @@ __pycache__/
 Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-shm
 Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/db.lock
 Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-wal
+Registro_Familiar/.vs/slnx.sqlite
+Registro_Familiar/.vs/Registro_Familiar/v15/.suo
