--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,6 @@ Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/db.lock
 Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-wal
 Registro_Familiar/.vs/slnx.sqlite
 Registro_Familiar/.vs/Registro_Familiar/v15/.suo
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-wal
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/storage.ide-shm
+Registro_Familiar/.vs/Registro_Familiar/v15/Server/sqlite3/db.lock
